--- a/python-grpc-lab/Dockerfile
+++ b/python-grpc-lab/Dockerfile
@@ -13,12 +13,14 @@ RUN pip install -r requirements.txt
 # Copy application code
 COPY . .
 
+ENV RUN_MODE=server
 # Expose port 
 EXPOSE 50051
 
 
 # Default command to run Flask application
-CMD ["python", "server.py"]
+# CMD ["python", "server.py"]
+CMD ["sh", "-c", "python ${RUN_MODE}.py"]
 
 
 
