--- a/python-socket-lab/Dockerfile
+++ b/python-socket-lab/Dockerfile
@@ -7,8 +7,11 @@ WORKDIR /app
 # Copy application code
 COPY . .
 
+ENV APP=server 
+
 # Expose port
 EXPOSE 8080
 
 # Default command to run socket server
-CMD ["python", "server.py"]
+# CMD ["python", "server.py"]
+CMD ["sh", "-c", "python ${APP}.py"]
